message DICT_VALUE
{
    optional string strValue = 1;
    optional int32 iValue = 2;
    optional float fValue = 3;
    optional double dValue = 4;
}

message INDEX_BORDER
{
    enum DICT_TYPE
    {
        STRING = 0;
        INT = 1;
        FLOAT = 2;
        DOUBLE = 3;
    }
    required DICT_TYPE dictType = 1 [default = STRING];
    required DICT_VALUE dictUpper = 2;
    required DICT_VALUE dictLower = 3;
    required uint32 entryUpper = 4;
    required uint32 entryLower = 5;
    required string csIP = 6;
}

message DICT_ENTRY_INDEX
{
    required string colName = 1;
    repeated INDEX_BORDER colIndexBorder = 2;
}
message LOCATION_INDEX
{
	required string raip = 1;
	required int32 dbid = 2;
    required string tableName = 3;
    repeated DICT_ENTRY_INDEX dictEntryIndex = 4;
}

message MSG_DS_DC_LOCATION_INDEX_SEND
{
    required uint32 taskID = 1;
    required uint32 loadTaskID = 2;
    repeated LOCATION_INDEX locationIndex = 3;
}

message MSG_DC_DS_LOCATION_INDEX_SEND_ACK
{
    required uint32 taskID = 1;
    required uint32 loadTaskID = 2;
    required int32 statusCode = 3;
}
